added new secion: footer, services, recentWork

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 					  <li><a class="nav__list--links" href="#home">Home</a></li>
 					  <li><a class="nav__list--links" href="#about">About us</a></li>
 					  <li><a class="nav__list--links" href="#services">Services</a></li>
-					  <li><a class="nav__list--links" href="#portfolio">Portfolio</a></li>  
+					  <li><a class="nav__list--links" href="#recentWorks">Recent Works</a></li>  
 					  <li><a class="nav__list--links" href="#team">Team</a></li>
 					  <li><a class="nav__list--links" href="#blog">Blog</a></li>
-					  <li><a class="nav__list--links nav__list--lastchild" href="#contact">Contact</a></li>
+					  <li><a class="nav__list--links nav__list--lastchild" href="#formid">Contact</a></li>
 				</ul>
 			</nav>
 			<div class="nav__cover"></div>
@@ -165,7 +165,7 @@
 				</div>
 				<div class="services__content--collumn">
 					<h3 class="content__left--head">Web Design</h3>
-					<p class="content-left--text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ip sum has been the industry's standard dummy text ever.</p>
+					<p class="content-left--text left__one">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ip sum has been the industry's standard dummy text ever.</p>
 					<figure class="services__icon content-left--icon">
 						<i class="fa fa-heart "></i>
 					</figure>
@@ -185,7 +185,7 @@
 			</div>
 		</div>		
 	</section>
-	<section id="portfolio" class="recentWorks">
+	<section id="recentWorks" class="recentWorks">
 		<div class="recentWorks__text">
 			<h2>Recent Works</h2>
 			<p>It has survived not only five centuries, but also the leap scrambled it to make a type.</p>
@@ -246,6 +246,63 @@
 						</div>
 					</figure>
 				</div>	
+			</div>
+		</div>
+	</section>
+	<section class="form" id="formid">
+		<div class="form__header">
+			<h2>Keep in Touch</h2>
+			<p>Nullam sit amet odio eu est aliquet euismod a a urna. Proin eu urna suscipit, dictum quam nec.</p>
+			<span class="separator"></span>
+		</div>
+		<div class="form__container">
+			<div class="form__information">
+				<div class="adress">
+					<h3>Our Adress</h3>
+					<p>HOUSE #13, STREAT ROAD, SYDNEY</p>
+				</div>
+				<div class="callus">
+					<h3>CALL US</h3>
+					<p>+ 880 168 109 1425</p>
+					<p>+ 0216809142</p>
+				</div>
+				<div class="emailus">
+					<h3>EMAIL US</h3>
+					<p>CONTACTUS@EMAIL.COM</p>
+				</div>
+			</div>
+			<div class="form__fill">
+				<form action="/action_page.php">
+				  <input type="text" class="form-control" name="name" placeholder="First Name" required="">
+				  <input type="text" class="form-control" name="lastName" placeholder="Last Name" required="">
+				  <input type="email" class="form-control" name="email" placeholder="Email" required="">
+				  <textarea placeholder="Message" name="text"></textarea>
+				  <input class="submit" type="submit" value="Send Message">
+				</form> 
+			</div>
+		</div>
+	</section>
+	<section class="footer" id="footer">
+		<div class="footer__container">
+			<div class="footer__background">
+				<div class="footer__background--content">
+					<h2>Let's Get Started Now. It's Free!</h2>
+					<p>30 day free trial. Free plan allows up to 2 projects. Pay if you need more. Cancel anytime. No catches.</p>
+					<button type="button">start free trial</button>
+				</div>
+			</div>
+			<div class="footer__nav">
+				<div class="footer__nav--left">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-youtube"></i></a>
+                    <a href="#"><i class="fa fa-dribbble"></i></a>
+                </div>
+				<div class="footer__nav--right">
+                    <p class="" data-wow-duration="1s">Made with <i class="fa fa-heart"></i> by <a href="#">Marcin Broda</a>2020. All&nbsp;Rights Reserved</p>
+                </div>
 			</div>
 		</div>
 	</section>
