added jquery function and refresh html

--- a/index.html
+++ b/index.html
@@ -32,82 +32,82 @@
 </head>
 <body>
 	<header id="home" class="header">
-		<div class="header__container">
-			<nav class="header__nav">
-				<ul class="nav__list">
-					  <li><a class="nav__list--links" href="#home">Home</a></li>
-					  <li><a class="nav__list--links" href="#about">About us</a></li>
-					  <li><a class="nav__list--links" href="#services">Services</a></li>
-					  <li><a class="nav__list--links" href="#recentWorks">Recent Works</a></li>  
-					  <li><a class="nav__list--links" href="#team">Team</a></li>
-					  <li><a class="nav__list--links" href="#blog">Blog</a></li>
-					  <li><a class="nav__list--links nav__list--lastchild" href="#formid">Contact</a></li>
-				</ul>
-			</nav>
-			<div class="nav__cover"></div>
-		</div>
-		<div class="button__container">
-			<button class="button"></button>
-		</div>
-		<div class="header__logo">
-			<a class="header__logo--link" href="#"><img src="./img/logo.png"></a>
-		</div>
-	<div class="header__carousel">
-		<div class="header__carousel--container">
-			<div class="slider">
-				<div class="slider__content">
-					<h3 class="slider__content--title3">Our Clients Are Our First Priority</h3>
-					<h1 class="slider__content_-title1">Welcome To Dino</h1>
-					<span class="slider__content--span"></span>
-					<p class="slider__content--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae eos.</p>
-					<p class="slider__content--textspan">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis hic commodi tenetur ea ad aliquam harum eum sint rem.</p>
-					<div class="slider__container">
-						<a href="#about" class="slider__container-link slider__container--started">Get Started Now</a>
-						<a class="slider__container-link slider__container--learn" href="#portfolio">Learn More</a>
-						
+		<section>
+			<div class="header__container">
+				<nav class="header__nav">
+					<ul class="nav__list">
+						  <li><a class="nav__list--links" href="#home">Home</a></li>
+						  <li><a class="nav__list--links" href="#about">About us</a></li>
+						  <li><a class="nav__list--links" href="#services">Services</a></li>
+						  <li><a class="nav__list--links" href="#recentWorks">Recent Works</a></li>  
+						  <li><a class="nav__list--links nav__list--lastchild" href="#formid">Contact</a></li>
+					</ul>
+				</nav>
+				<div class="nav__cover"></div>
+			</div>
+			<div class="button__container">
+				<button class="button"></button>
+			</div>
+			<div class="header__logo">
+				<a class="header__logo--link" href="#"><img src="./img/logo.png"></a>
+			</div>
+			<div class="header__carousel">
+				<div class="header__carousel--container">
+					<div class="slider">
+						<div class="slider__content">
+							<h3 class="slider__content--title3">Our Clients Are Our First Priority</h3>
+							<h1 class="slider__content_-title1">Welcome To Dino</h1>
+							<span class="slider__content--span"></span>
+							<p class="slider__content--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae eos.</p>
+							<p class="slider__content--textspan">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis hic commodi tenetur ea ad aliquam harum eum sint rem.</p>
+							<div class="slider__container">
+								<a href="#about" class="slider__container-link slider__container--started">Get Started Now</a>
+								<a class="slider__container-link slider__container--learn" href="#portfolio">Learn More</a>
+								
+							</div>
+						</div>
+						<img class="header__img" src="./img/baloons-pc.jpg" alt="ballons">
+					</div>
+					<div class="slider">
+						<div class="slider__content">
+							<h3 class="slider__content--title3">Our Clients Are Our First Priority</h3>
+							<h1 class="slider__content_-title1">Welcome To Cino</h1>
+							<span class="slider__content--span"></span>
+							<p class="slider__content--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae eos.</p>
+							<p class="slider__content--textspan">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis hic commodi tenetur ea ad aliquam harum eum sint rem.</p>
+							<div class="slider__container">
+								<a  class="slider__container-link slider__container--started" href="#services">Get Started Now</a>
+								<a class="slider__container-link slider__container--learn" href="#portfolio">Learn More</a>
+							</div>
+						</div>
+						<img class="header__img" src="./img/forest-pc.jpg" alt="forest">
+					</div>
+					<div class="slider">
+						<div class="slider__content">
+							<h3 class="slider__content--title3">Our Clients Are Our First Priority</h3>
+							<h1 class="slider__content_-title1">Welcome To Bino</h1>
+							<span class="slider__content--span"></span>
+							<p class="slider__content--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae eos.</p>
+							<p class="slider__content--textspan">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis hic commodi tenetur ea ad aliquam harum eum sint rem.</p>
+							<div class="slider__container">
+								<a href="#services" class="slider__container-link slider__container--started">Get Started Now</a>
+								<a class="slider__container-link slider__container--learn" href="#portfolio">Learn More</a>
+							</div>
+						</div>
+						<img class="header__img" src="./img/mountains-pc.jpg" alt="mountains">
 					</div>
 				</div>
-				<img class="header__img" src="./img/baloons-pc.jpg" alt="ballons">
+				<div class="header__cover--img"></div>
 			</div>
-			<div class="slider">
-				<div class="slider__content">
-					<h3 class="slider__content--title3">Our Clients Are Our First Priority</h3>
-					<h1 class="slider__content_-title1">Welcome To Cino</h1>
-					<span class="slider__content--span"></span>
-					<p class="slider__content--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae eos.</p>
-					<p class="slider__content--textspan">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis hic commodi tenetur ea ad aliquam harum eum sint rem.</p>
-					<div class="slider__container">
-						<a  class="slider__container-link slider__container--started" href="#services">Get Started Now</a>
-						<a class="slider__container-link slider__container--learn" href="#portfolio">Learn More</a>
-					</div>
+			<div class="header__anchor">
+				<div class="anchor">
+					<img class="anchor__img" src="./img/anchor.png">
 				</div>
-				<img class="header__img" src="./img/forest-pc.jpg" alt="forest">
 			</div>
-			<div class="slider">
-				<div class="slider__content">
-					<h3 class="slider__content--title3">Our Clients Are Our First Priority</h3>
-					<h1 class="slider__content_-title1">Welcome To Bino</h1>
-					<span class="slider__content--span"></span>
-					<p class="slider__content--text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae eos.</p>
-					<p class="slider__content--textspan">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis hic commodi tenetur ea ad aliquam harum eum sint rem.</p>
-					<div class="slider__container">
-						<a href="#services" class="slider__container-link slider__container--started">Get Started Now</a>
-						<a class="slider__container-link slider__container--learn" href="#portfolio">Learn More</a>
-					</div>
-				</div>
-				<img class="header__img" src="./img/mountains-pc.jpg" alt="mountains">
-			</div>
-		</div>
-		<div class="header__cover--img"></div>
-	</div>
-	<div class="header__anchor">
-		<div class="anchor">
-			<img class="anchor__img" src="./img/anchor.png">
-		</div>
-	</div>
+		</section>
 	</header>
-	<section  class="about">
-		<div id="about" class="about__container">
+	<section id="about" class="about">
+		<div  class="about__container">
 			<div class="about__container--row">
 				<div class="about__border--img">
 					<span class="about__img img__infin"></span>
@@ -158,7 +158,11 @@
 				</h2>
 				<div class="services__content--collumn">
 					<h3>Web Design</h3>
-					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ip sum has been the industry's standard dummy text ever.</p>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ip sum has been the industry's standard dummy text ever.
+						<span class="more">Lorem Ipsum is simply dummy text of the.</span>
+						<a href="#" class="showMore">Pokaż więcej...</a>
+					</p>
+
 					<figure class="services__icon">
 						<i class="fa fa-heart"></i>
 					</figure>
